--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
-    "mysql2": "^3.5.2"
+    "mongoose": "^8.0.0"  <-- Új: Mongoose a MongoDB-hez
   }
 }
